--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\AsteroidScript.cs" />
     <Compile Include="Assets\Scripts\SpaceshipControls.cs" />
     <Reference Include="Unity.TextMeshPro.Editor">
       <HintPath>E:/Asteroids2D/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
